@@ -29,6 +29,8 @@ test_SOURCES    = recno.cpp \
                   txn.cpp \
                   memtracker.cpp
 
+test_SOURCES    = recno.cpp memtracker.cpp main.cpp
+
 test_LDADD      = $(top_builddir)/src/libhamsterdb.la \
                   -lcppunit -ldl
 
